fixing the carousel the sixes were not responsive

--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -33,8 +33,4 @@
     gap: 5px;
    
  }   
- .img-logo{
-    height:fit-content;
-    width: 100%;
- }
 }
